--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "@libsql/client": "^0.6.2",
-    "hono": "^4.4.5"
+    "@types/uuid": "^9.0.8",
+    "hono": "^4.4.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "vercel": "^32.4.1"
