Update environment variables and API configuration

--- a/.env.model
+++ b/.env.model
@@ -1,2 +1,21 @@
+
+# Environment variables for the db
 TURSO_DATABASE_URL=XXXX
 TURSO_AUTH_TOKEN=XXXX
+
+# Dev client
+DEV_FRONT_ORIGIN=XXXX
+DEV_FRONT_PORT=XXXX
+DEV_FRONT_PATH=XXXX
+
+# Dev server
+DEV_API_ORIGIN=XXXX
+DEV_API_PORT=XXXX
+DEV_API_BASEPATH=XXXX
+
+# Prod client
+PROD_FRONT_ORIGIN=XXXX
+
+# Prod server
+PROD_API_ORIGIN=XXXX
+
