Add new environment variable

--- a/.env.model
+++ b/.env.model
@@ -1,7 +1,8 @@
 
-# Environment variables for the db
+# General
 TURSO_DATABASE_URL=XXXX
 TURSO_AUTH_TOKEN=XXXX
+TOKEN_SECRET=XXXX
 
 # Dev client
 DEV_FRONT_ORIGIN=XXXX
